Add a temporary activity to handle the BLE GattServices. Set the minSdkVersion = 18 to make sure BLE is available

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,6 @@
     <string name="ai_repeat">repeat</string>
     <string name="ai_ringAndVibration">ring &amp; vibration</string>
     <string name="title_activity_lefinder" translatable="false">LEFinderActivity</string>
+    <string name="title_activity_blectrl">BLECtrlActivity</string>
 
 </resources>
